# django_rest_aiogram

./: .dockerignore  .env_example  Dockerfile  README.md  celerybeat-schedule  docker-compose.yaml  pyproject.toml
backend/django_aiogram/: db.sqlite3  manage.py
backend/django_aiogram/django_aiogram/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/django_aiogram/tasks_app/: admin.py  apps.py  authentication.py  middleware.py  serializers.py  tasks.py  urls.py  views.py
backend/django_aiogram/tasks_app/migrations/: 0001_initial.py  0002_replace_unique_together_with_constraint.py  0003_custom_pk.py
backend/django_aiogram/tasks_app/models/: __init__.py  category.py  task.py  user.py
backend/django_aiogram/tasks_app/notifications/: __init__.py  telegram.py
backend/django_aiogram/tasks_app/services/: __init__.py  telegram_auth.py
backend/django_aiogram/tasks_app/utils/: id_generator.py
bot/: add_task.py  api_client.py  categories.py  config.py  keyboards.py  list_tasks.py  main.py  states.py
bot/handlers/: add_task.py  start.py
bot/utils/: date_parser.py
